# RCUDA

./: .Rbuildignore  .gitignore  Books  Changes  DESCRIPTION  GenerationNotes  LICENSE  Links  Linux  NAMESPACE  NEWS  Notes  README  README.md  TODO  Todo.xml  checkSDKVersion.c  configure  configure.in  cudaversion.c  deprecated  nvccOpts.R  showSizeofs.cu  sizeofs.cu
Paper/: Driver_RunTime.tex  Examples.tex  GNUmakefile  RCUDA.tex  cluster.R  cluster.cu  dist.R  dist.tex  distPitch.R  dnorm.cu  dnorm.tex  gpu.bib  importanceSampling.tex  runDistTimes.R
R/: StructSizes.R  autoContext.R  autoDevice.R  autoEnums.R  autoEvent.R  autoFunction.R  autoMemory.R  autoModule.R  autoOther.R  autoStream.R  autoTypedefs.R  compile.R  computeGridSize.R  context.R  cudaDeviceProp.R  device.R  enumDefs.R  getDevProps.R  highlevel.R  manual.R  notImplemented.R  nvcc.R.in  onLoad.R  profile.R  rcuda_rng.R  rgamma.R  rnorm.R  utility.R
TU/: GNUmakefile  Issues  ToFixInTU  calls.R  check.R  clang.R  code.R  codeDepends.R  const.c  cuda_runtime_api.h  docFuns.R  docs.R  generateCode.Rdb  getTU.R  nativeGen.R  nvvm.R  nvvmScript.r  tu.c  tu.c.001t.tu  tu1.R  tuInfo.rda
Web/: GNUmakefile  index.html.in
explorations/: compCUDA.R  cudaComparison.Rdb  dnorm.R  dnormOutput.R  dnormRinputs.R  eg.R  grid.R  log_dnorm.R  noinputsEg.R  setEg.R
man/: CUresult-class.Rd  convertToPtr.Rd  copyFromDevice.Rd  createContext.Rd  cuArray3DCreate.Rd  cuArray3DGetDescriptor.Rd  cuArrayCreate.Rd  cuArrayDestroy.Rd  cuArrayGetDescriptor.Rd  cuCtxCreate.Rd  cuCtxDestroy.Rd  cuCtxDisablePeerAccess.Rd  cuCtxEnablePeerAccess.Rd  cuCtxGetApiVersion.Rd  cuCtxGetCacheConfig.Rd  cuCtxGetCurrent.Rd  cuCtxGetDevice.Rd  cuCtxGetLimit.Rd  cuCtxGetSharedMemConfig.Rd  cuCtxPopCurrent.Rd  cuCtxPushCurrent.Rd  cuCtxSetCacheConfig.Rd  cuCtxSetCurrent.Rd  cuCtxSetLimit.Rd  cuCtxSetSharedMemConfig.Rd  cuCtxSynchronize.Rd  cuDeviceCanAccessPeer.Rd  cuDeviceGet.Rd  cuDeviceGetAttribute.Rd  cuDeviceGetByPCIBusId.Rd  cuDeviceGetCount.Rd  cuDeviceGetName.Rd  cuDeviceGetPCIBusId.Rd  cuDeviceTotalMem.Rd  cuEventCreate.Rd  cuEventDestroy.Rd  cuEventElapsedTime.Rd  cuEventQuery.Rd  cuEventRecord.Rd  cuEventSynchronize.Rd  (+107 more)
src/: Makevars  Makevars.in  RCUDA.h  RConverters.c  RConverters.h  RError.h  autoContext.c  autoDevice.c  autoEnumConverters.c  autoEnumDecls.h  autoEvent.c  autoFunction.c  autoMemory.c  autoModule.c  autoOther.c  autoSizeofStructs.cpp  autoStream.c  context.c  createRef.c  cudaDeviceProp.c  declarations.h  dev.cu  device.c  enumConverters.c  enumDecls.h  floatArray.c  getDevProps.c  manual.c  manualDecls.h  memcpy3DParms.c  sizeofStructs.c  structCopy.c  structCopyDecls.h
tests/: CUdeviceClass.R  aaa.R  async.R  basic_example.R  basic_tests.R  callDoubleScalar.R  context.R  copyStruct.R  cudaPtr.R  devProp.R  device.R  doubleFloat.R  event.R  eventSync.R  funcAttributes.R  gridSize.R  loadModule.R  loadModuleData.R  memory.R  mini_test.R  prof.config  profiler.R  random_test.R  random_test2.R  random_test3.R  rgamma.R  rgamma.R.old  rgamma_test.R  rnorm_test.R  stream.R  streamUse.R  truncNorm.R  typedefs.R
(+49 files in other folders)
