AC_INIT(src/RCUDA.h)

# find the cuda.h file.
# Find nvcc

if test -z "$CUDA_DIR" ; then
  if test -r "/usr/local/cuda" ; then
     CUDA_DIR=/usr/local/cuda
  elif test -r "/usr/local/cuda-5.0" ; then
     CUDA_DIR=/usr/local/cuda-5.0
  else
     echo "the CUDA development files are not in the typical locations."
     echo "Please rerun having set the environment variable CUDA_DIR to"
     echo "the path of the directory that contains both the include/ and lib/ directories"
     echo "of the CUDA installation"
     if test -z "$FORCE" ;  then
       exit 1
     fi
  fi
fi



if test -z "$CUDA_INC_DIR" ; then
  CUDA_INC_DIR=${CUDA_DIR}/include
fi
if test -z "$CUDA_LIB_DIR" ; then
 if test -e ${CUDA_DIR}/lib64 ; then
   CUDA_LIB_DIR=${CUDA_DIR}/lib64
 else
   CUDA_LIB_DIR=${CUDA_DIR}/lib
 fi
fi

export PATH=$CUDA_DIR/bin:$PATH
AC_PATH_PROGS(NVCC_BIN, nvcc)


CPPFLAGS="-I${CUDA_INC_DIR} $CPPFLAGS"

AC_CHECK_HEADER(cuda.h, FOUND_CUDA_H=1)

#AC_TRY_COMPILE([
##include <cuda.h>
##include <cuda_runtime_api.h>
#])

LDFLAGS="-L${CUDA_LIB_DIR} ${LDFLAGS}"
LIBS="-lcuda -lcudart ${LIBS}"

AC_TRY_LINK([
#include <cuda.h>  
#include <cuda_runtime_api.h>  
],
[
 int ver;
 cudaDriverGetVersion(&ver);
 cudaRuntimeGetVersion(&ver);
], echo "linking okay", [echo "cannot link with libcuda" ; if test -z "$FORCE" ; then exit 1 ; fi])


$CC -o checkSDKVersion checkSDKVersion.c $CPPFLAGS $LDFLAGS $LIBS
./checkSDKVersion
if ! test $? = 0 ; then
  echo "You appear to have an older CUDA SDK. We require CUDA SDK 5.0 or higher"
  if test -z "$FORCE" ;  then
    exit 2
  fi
fi


echo "CUDA_INC_DIR = $CUDA_INC_DIR" 
echo "CUDA_LIB_DIR = $CUDA_LIB_DIR" 
echo "nvcc = $NVCC_BIN"

AC_SUBST(CUDA_INC_DIR)
AC_SUBST(CUDA_LIB_DIR)
AC_SUBST(CUDA_DIR)
AC_SUBST(NVCC_BIN)


AC_OUTPUT(src/Makevars R/nvcc.R)
#chmod -w R/nvcc.R

echo "Computing size of CUDA structures"
echo "Compiling sizeofs"
${NVCC_BIN} -o sizeofs sizeofs.cu
if  test $? = 0; then
 echo "Running sizeofs"
 ./sizeofs > R/StructSizes.R
else
  echo "Problems compiling sizeofs.cu. Continuing with installation, but theremay be problems."
fi


